brite: fix active button z-index in btn-group, closes #1338

--- a/docs/5/brite/_bootswatch.scss
+++ b/docs/5/brite/_bootswatch.scss
@@ -105,6 +105,10 @@
   .btn {
     margin-left: 0;
   }
+
+  > .btn.active {
+    z-index: 0;
+  }
 }
 
 .btn-group,
